k8s/security/opa/constraint-block-latest.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1     
kind: K8sBlockLatestTag                           
metadata:
  name: block-latest-tag
spec:
  enforcementAction: deny                       
  match:
    kinds:
      - apiGroups: ["apps", "batch"]
        kinds: ["Deployment", "StatefulSet", "Job"]
    excludedNamespaces: ["kube-system", "gatekeeper-system", "ingress-nginx"]
