k8s/security/opa/constraint-require-non-root.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1     
kind: K8sRequireNonRoot
metadata:
  name: require-non-root
spec:
  enforcementAction: deny                
  match:
    kinds:
      - apiGroups: ["apps", "batch"]
        kinds: ["Deployment", "StatefulSet", "Job"]
    excludedNamespaces: ["kube-system", "gatekeeper-system", "ingress-nginx"] #remove os namespaces que utilizam de serviços que necessitam de acesso root.
