k8s/security/opa/constraint-require-resource-limits.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1     
kind: K8sRequireResourcesLimits
metadata:
  name: require-resource-limits
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: ["apps", "batch"]
        kinds: ["Deployment", "StatefulSet", "Job"]
    excludedNamespaces: ["kube-system", "gatekeeper-system", "ingress-nginx"]
