k8s/security/opa/constraint-require-resource-request.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1     
kind: K8sRequireResourcesRequests
metadata:
  name: require-resources-requests
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: ["apps", "batch"]
        kinds: ["Deployment", "StatefulSet", "Job"]
    excludedNamespaces: ["kube-system", "gatekeeper-system", "ingress-nginx"]
